[package]
name = "eccfs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.3"
bitflags = "2.4.1"
cmac = "0.7.2"
crypto = "0.5.1"
env_logger = "0.11.0"
fuser = "0.14"
hex = "0.4.3"
libc = "0.2.149"
log = "0.4.20"
lru = "0.12.1"
md4 = "0.10.2"
rand = "0.8.5"
rand_core = "0.6.4"
sha3 = "0.10.8"
thiserror = "1.0.56"

[[bin]]
name = "eccfs-fuse-cli"
path = "src/fuse/cli.rs"
