[package]
name = "eccfs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.3"
bitflags = "2.4.1"
cmac = "0.7.2"
crypto = "0.5.1"
fuser = "0.14"
hex = "0.4.3"
libc = "0.2.149"
log = "0.4"
lru = "0.12.1"
md4 = "0.10.2"
rand = "0.8.5"
rand_core = "0.6.4"
sha3 = "0.10.8"
spin = "0.9.8"
thiserror-no-std = "2.0.2"

[dev-dependencies]
env_logger = "0.10.0"
anstream = "*"

[features]
ro_cache_server = []
channel_lru = []
fuse = []
std_file = []
