[package]
name = "eccfs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8.3", default-features = false}
aes-gcm = "0.10.3"
bitflags = "2.4.1"
cmac = "0.7.2"
crypto = "0.5.1"
fuser = { version = "0.14", optional = true }
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
libc = { version = "0.2.149", default-features = false }
log = "0.4"
lru = "0.12.1"
md4 = { version = "0.10.2", default-features = false }
rand = { version = "0.8.5", default-features = false, features = [ "small_rng" ] }
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
spin = "0.9.8"
thiserror-no-std = "2.0.2"

[dev-dependencies]
env_logger = "0.10.0"
anstream = "*"

[features]
ro_cache_server = []
channel_lru = []
fuse = [ "dep:fuser" ]
std_file = []
nightly_build = []
